Implement setting of different font for practice modes.

One font and size per language. Can be configured in
language settings in the editor.

BUG: 237056
BUG: 266263
FIXED-IN: KDE 4.7